MAPRHADOOP-110: Added java8_support option to run distributed shell on jdk8 and add jdk11+ support