@@ -227,6 +227,12 @@ public class Client {
   // Debug flag
   boolean debugFlag = false;
 
+  //Flag to indicate whether to use default GC for current jdk version or Parallel GC
+  boolean useDefaultGC = false;
+
+  //Flag to indicate whether to disable options that do not support for jdk 8
+  boolean jdk8Support = false;
+
   // Timeline domain ID
   private String domainId = null;
 
@@ -371,6 +377,8 @@ public class Client {
       "If failure count reaches to maxAppAttempts, " +
       "the application will be failed.");
     opts.addOption("debug", false, "Dump out debug information");
+    opts.addOption("useDefaultGC", false, "Use default GC instead Parallel GC");
+    opts.addOption("java8_support", false, "Disable jdk options that don't support");
     opts.addOption("domain", true, "ID of the timeline domain where the "
         + "timeline entities will be put");
     opts.addOption("view_acls", true, "Users and groups that allowed to "
@@ -469,7 +477,14 @@ public class Client {
 
     if (cliParser.hasOption("debug")) {
       debugFlag = true;
+    }
 
+    if (cliParser.hasOption("useDefaultGC")) {
+      useDefaultGC = true;
+    }
+
+    if (cliParser.hasOption("java8_support")) {
+      jdk8Support = true;
     }
 
     if (cliParser.hasOption("keep_containers_across_application_attempts")) {
@@ -953,7 +968,13 @@ public class Client {
     vargs.add("\"" + Environment.JAVA_HOME.$$() + "/bin/java\"");
     // Set Xmx based on am memory size
     vargs.add("-Xmx" + amMemory + "m");
-    // Set class name 
+    if (!jdk8Support) {
+      vargs.add("--add-opens java.base/java.lang=ALL-UNNAMED");
+    }
+    if (!useDefaultGC) {
+      vargs.add("-XX:+UseParallelGC");
+    }
+    // Set class name
     vargs.add(appMasterMainClass);
     // Set params for Application Master
     if (containerType != null) {
